feat: Dockerise all the app

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,27 +1,28 @@
 services:
   backend:
     build:
-      context: ./backend
+      context: .
+      dockerfile: ./backend/Dockerfile
     ports:
       - "8000:8000"
-    volumes:
-      - ./backend:/app
     depends_on:
       - db
     environment:
       - DB_HOST=db
       - DB_PORT=3306
-      - DB_NAME=mydatabase
+      - DB_NAME=rncpdockerdb
       - DB_USER=root
       - DB_PASSWORD=rootpassword
       - SECRET_KEY=xyz
+    volumes:
+      - ./backend/backend:/app/backend
 
   db:
     image: mysql:8.0
     ports:
       - "3306:3306"
     environment:
-      MYSQL_DATABASE: mydatabase
+      MYSQL_DATABASE: rncpdockerdb
       MYSQL_ROOT_PASSWORD: rootpassword
     volumes:
       - db_data:/var/lib/mysql
